--- a/src/styles/common/variable.less
+++ b/src/styles/common/variable.less
@@ -1,4 +1,4 @@
-@home-logo: #d33319;
+@home-logo: #cf191b;
 @home-p: #333333;
 @fff: #fff;
 @home-login-btn: #4169E1;
@@ -27,3 +27,4 @@
 @details-span: #8C8C8C;
 @details-aging: #646FB0;
 @serve-six: #606266;
+@calculator-h: #e73c3b;
